--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,17 @@
     </div>
   </div>
 </nav>
+<div class="row text-center">
+  <div class="container">
+      <h3>Contact me</h3>
+      <h5>Phone Number: (756) 300-4690</h5>
+      <h5>Yusef Salem</a></h5>
+      <img src="img/dressy pic.jpg" alt=""alt=""
+      width="900px">
+      
+
+  </div>
+</div>
 
   </body>
 </html>
